﻿Changelog
=========

4.10-dev - (unreleased)
-----------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

4.9 - (2012-04-26)
------------------
* Change: improved layout of data centre page after feedback from users.
  Browse catalogue more visible. moved featured indicator to the right column.
  [demarant]
* Feature: added tag cloud on data centre page 
  [demarant]
* Bug fix: fix tests broken due to changes in eea.versions 
  [tiberich]

4.8 - (2012-03-05)
------------------
* Bug fix: use themes ids instead of titles when checking if it is data centre.
  Fixed bug where Air pollution was not recongnised as data centre.
  [demarant #4979]
* Bug fix: renamed stylesheet to dtml; inserted portal_url to image links
  [tiberich #4956]

4.7 - (2012-02-15)
------------------
* Bug fix: avoid server error on listall view for themes when view_name is
  not provided
  [tiberich #4947]

4.6 - (2012-02-06)
------------------
* Bug fix: Fixed subscribers to be registered for IBaseContent instead of *
  [ghicaale]

4.5 - (2011-12-07)
------------------
* Bug fix: Made dc view point to theme/dc instead of a relative link to dc
  [ichimdav #4819]

4.4 - (2011-11-28)
------------------
* Bug fix: Fixed the all items links of whatsnewgallery in dc view 
  [demarant #4784]

4.3 - (2011-11-22)
------------------
* Bug fix: Made all base objects theme taggable
  [voineali #4740]

4.2 - (2011-11-21)
------------------
* Bug fix: Made all base content theme taggable
  [voineali #4740]

4.1 - (2011-11-18)
------------------
* Change: Added ThemesField to be used with ThemeTaggable Content-Types
  [voineali #4694]
* Change: Made Themes tab hidden as it already in Categorization tab
  [voineali #4694]

4.0 - (2011-11-18)
------------------
* Bugfix: Fixed theme title in portlets
  [szabozo0 #4691]
* Change: Migrated mediacentre_view from custom
  [szabozo0 #4161]
* Bugfix: Removed "Promote to theme centre" from tab
  [szabozo0 #4635]