@@ -1,4 +1,6 @@
 """ eea.themecentre package """
 
 from zope.i18nmessageid import MessageFactory
-_ = MessageFactory('eea.translations')
+
+eeaMessageFactory = MessageFactory('eea')
+
